--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Junkang Liu"
-  avatar           : "images/brown.jpg"
+  avatar           : "images/微信图片_20251201230158_398_362.jpg"
   bio              : "4th-year PhD candidate in Tianjin Univeisity"
   location         : "Tianjin, China"
   employer         :
