--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Junkang Liu"
   avatar           : "images/微信图片_20251201230158_398_362.jpg"
-  bio              : "4th-year PhD candidate in Tianjin Univeisity"
+  bio              : "PhD candidate in Tianjin Univeisity"
   location         : "Tianjin, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com.sg/citations?user=N7pJWIoAAAAJ&hl=en"
-  email            : "hly2021@tju.edu.cn"
+  email            : "junkangliukk@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
