--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -1,52 +1,31 @@
 name: Get Citation Data
 
-on:
-  push:
-    branches: [ main ]
-  schedule:
-    - cron: '0 8 * * *'
-  workflow_dispatch:
+on: 
+ page_build: 
+ schedule:
+  - cron:  '0 8 * * *'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
+    - uses: actions/checkout@v2
+    - name: Install Reqs
       run: |
-        pip install requests beautifulsoup4
-    
-    - name: Run Google Scholar crawler
-      env:
+        sudo apt-get install python3-setuptools
+    - name: Run
+      run: |
+        cd ./google_scholar_crawler
+        pip3 install -r requirements.txt
+        python3 main.py
+        cd ./results
+        git init
+        
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git"
+        git add *.json
+        git commit -m "Updated Citation Data"
+        git push "${remote_repo}" HEAD:google-scholar-stats --force
+      env: 
         GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
-      run: |
-        python google_scholar_crawler/main.py 
-    
-    - name: Check generated file
-      run: |
-        echo "Generated file:"
-        ls -la gs_data.json
-        echo -e "\nFile preview:"
-        head -20 gs_data.json
-    
-    - name: Configure Git
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-    
-    - name: Commit and push
-      run: |
-        git add gs_data.json
-        if git diff --cached --quiet; then
-          echo "No changes to commit"
-        else
-          git commit -m "📊 Update Google Scholar citation data"
-          git push
-          echo "Data updated successfully"
-        fi
