--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Junkang Liu"
+title                    : "Junkang Liu (刘俊康)"
 description              : " "
 repository               : "junkangLiu0/junkangLiu0.github.io"
 google_scholar_stats_use_cdn : false
